What's New in Python 2.2.4?

- SF #746304: Builtin functions are now copy.[deep]copyable.
  Classes are now also deepcopyable.

- SF #753592: webchecker/wsgui now handles user supplied directories.

What's New in Python 2.2.3 (final) ?
Release date: 30-May-2003
====================================

- SF #745055: Fix memory leaks in Tkapp_Split and Tkapp_SplitList.

- On Posix systems, as of Python 2.2, the arguments for
  socket.socket() default to AF_INET, SOCK_STREAM.  This is now so for
  the Windows-specific wrapper in socket.py as well.

- Backport SF #736892: Add argument sanity checking for __get__().

- SF #742911: Fix segfault due to clearing weak references too late
  for new-style class instances.

- Backport SF 742860: new, improved __delitem__ for WeakKeyDictionary.
  The old __delitem__ wasn't threadsafe, was very inefficient (expected
  time O(len(dict)) instead of O(1)), and could raise a spurious
  RuntimeError if another thread mutated the dict during __delitem__, or if
  a comparison function mutated it.  It also neglected to raise KeyError
  when the key wasn't present; didn't raise TypeError when the key wasn't
  of a weakly referencable type; and broke various more-or-less obscure
  dict invariants by using a sequence of equality comparisons over the
  whole set of dict keys instead of computing the key's hash code to
  narrow the search to those keys with the same hash code.  All of these
  are considered to be bugs.  A new implementation of __delitem__ repairs
  all that, but note that fixing these bugs may change visible behavior
  in code relying (whether intentionally or accidentally) on old behavior.

- Backport SF #745478: email package 2.5.3; fixes a buglet in
  multipart boundary calculation.

- RPM spec file update from Sean Reifschneider.

- Mac OS X specific backports for distutils/unixccompiler.py.  SF #723495


What's New in Python 2.2.3c1 ?
Release date: 22-May-2003
============================
